syntax="proto3";

package order;

import "google/protobuf/empty.proto";
import "temporal/v1/temporal.proto";

option go_package = "temporal-master-class/generated/temporal";

service order {
  // Очередь задач
  // https://docs.temporal.io/workers#task-queue
  option (temporal.v1.service) = {
    task_queue: "order-v1"
  };

  // Это основной workflow
  rpc CreateOrder(CreateOrderRequest) returns (google.protobuf.Empty) {
    option (temporal.v1.workflow) = {
      id_reuse_policy: WORKFLOW_ID_REUSE_POLICY_ALLOW_DUPLICATE
      id: 'orders/${! id }'
      query: { ref: "Read" }
      update: { ref: "Update" }
      signal: { ref: "Delete" }
    };
  }

  // Получение информации из запущенного workflow
  // https://docs.temporal.io/encyclopedia/workflow-message-passing#writing-query-handlers
  rpc Read(google.protobuf.Empty) returns (Order) {
    option (temporal.v1.query) = {};
  }

  // Обновление информации в запущенном workflow
  // https://docs.temporal.io/encyclopedia/workflow-message-passing#writing-query-handlers
  rpc Update(UpdateOrderRequest) returns (Order) {
    option (temporal.v1.update) = {};
  }

  // Удаление workflow. На самом деле это сигнал, который будет останавливать workflow с признаком отменен.
  // https://docs.temporal.io/encyclopedia/workflow-message-passing#writing-signal-handlers
  rpc Delete(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (temporal.v1.signal) = {};
  }
}

message CreateOrderRequest {
  string id = 1;
  string customerId = 2;
  string address = 3;
  repeated Product products = 4;
}

message Product {
  string id = 1;
  string name = 2;
  int32 qty = 3;
  int32 price = 4;
}

message UpdateOrderRequest {
  string address = 1;
  repeated Product products = 2;
}

message Order {
  string id = 1;
  string customerId = 2;
  string address = 3;
  repeated Product products = 4;
  int32 total = 5;
}
